# ira

./: .gitignore  README.md  benchmark_results_ira.md  docker-compose.yml
backend/: README.md  benchmark_details_ira.json  benchmark_results.md  evaluate_benchmarks.py  main.py  pyproject.toml
backend/HiMem/: .gitignore  README.md  requirements.txt
backend/HiMem/config/: base.yaml
backend/HiMem/experiment/: batch_run.sh  benchmark.py  checkpoint_manager.py  docker-compose.yaml  gen.py  memory_construction.py  metrics.py  prompts.py  run.sh
backend/HiMem/himem/: exceptions.py
backend/REALTALK/: README.md  analyze_data.py  evaluate_memory.py
backend/REALTALK/data/: Chat_10_Fahim_Muhhamed.json  Chat_1_Emi_Elise.json  Chat_2_Kevin_Elise.json  Chat_3_Kevin_Paola.json  Chat_4_Emi_Paola.json  Chat_5_Nicolas_Nebraas.json  Chat_6_Vanessa_Nicolas.json  Chat_7_Nebraas_Vanessa.json  Chat_8_Akib_Muhhamed.json  Chat_9_Fahim_Akib.json
backend/REALTALK/eval_emotional_intelligence/: __init__.py  base.py  empathy.py  motivation.py  self_awareness.py  self_regulation.py  social_skills.py
backend/REALTALK/eval_memory/: qa_tool.py
backend/REALTALK/utils/: utils_file.py  utils_hf_models.py
backend/app/: __init__.py  auth.py  chat.py  config.py  database.py  main.py  memory_service.py
backend/locomo/data/: locomo10_hinglish_ira.json
backend/locomo/generative_agents/: conversation_utils.py  event_utils.py  generate_conversations.py  memory_utils.py
backend/locomo/prompt_examples/: chatgpt_instructions.json
backend/locomo/scripts/: env.sh  generate_conversations.sh  (+2 more)
(+129 files in other folders)
